@@ -571,6 +571,34 @@ evdev_is_wellspring2(unsigned short *id)
   return 0;
 }
 
+/* Core2 Duo MacBook Pro (MacBookPro5,1, October 2008)
+ * Core2 Duo MacBook (MacBook5,1, October 2008)
+ * MacBook Air (MacBookAir2,1, October 2008) */
+static int
+evdev_is_wellspring3(unsigned short *id)
+{
+  unsigned short product = id[ID_PRODUCT];
+
+  if (id[ID_BUS] != BUS_USB)
+    return 0;
+
+  if (id[ID_VENDOR] != USB_VENDOR_ID_APPLE)
+    return 0;
+
+  if ((product == USB_PRODUCT_ID_WELLSPRING3_ANSI)
+      || (product == USB_PRODUCT_ID_WELLSPRING3_ISO)
+      || (product == USB_PRODUCT_ID_WELLSPRING3_JIS))
+    {
+      logdebug(" -> WellSpring III USB assembly\n");
+
+      kbd_set_fnmode();
+
+      return 1;
+    }
+
+  return 0;
+}
+
 /* Any internal keyboard */
 static int
 evdev_is_internal(unsigned short *id)
@@ -579,7 +607,8 @@ evdev_is_internal(unsigned short *id)
 	  || evdev_is_geyser4(id)
 	  || evdev_is_geyser4hf(id)
 	  || evdev_is_wellspring(id)
-	  || evdev_is_wellspring2(id));
+	  || evdev_is_wellspring2(id)
+	  || evdev_is_wellspring3(id));
 }
 
 
