@@ -34,13 +34,16 @@ typedef enum
     MACHINE_MACBOOKPRO_2,
     MACHINE_MACBOOKPRO_3,
     MACHINE_MACBOOKPRO_4,
+    MACHINE_MACBOOKPRO_5,
 
     MACHINE_MACBOOK_1,
     MACHINE_MACBOOK_2,
     MACHINE_MACBOOK_3,
     MACHINE_MACBOOK_4,
+    MACHINE_MACBOOK_5,
 
     MACHINE_MACBOOKAIR_1,
+    MACHINE_MACBOOKAIR_2,
 #else
     MACHINE_POWERBOOK_32,
     MACHINE_POWERBOOK_33,
